# magicmouse-ptp

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.github/: copilot-instructions.md
driver/: Cargo.toml  magicmouse_ptp.inx
driver/src/: descriptors.rs  device.rs  driver.rs  input.rs  lib.rs  queue.rs  wdf_object_context.rs
