[workspace]
members = ["driver"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/Agash/magicmouse-ptp"
# Creative Commons Attribution-NonCommercial 4.0 International
license = "CC-BY-NC-4.0"

[workspace.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace.dependencies]
anyhow = "1.0.89"
paste = "1.0.14"
wdk = "0.4.1"
wdk-alloc = "0.4.1"
wdk-build = "0.5.1"
wdk-panic = "0.4.1"
wdk-sys = "0.5.1"
